Correctly centre horizontally the testimonial on mobile
https://github.com/elifesciences/enhanced-preprints-issues/issues/1280

--- a/assets/sass/patterns/molecules/testimonial-with-link.scss
+++ b/assets/sass/patterns/molecules/testimonial-with-link.scss
@@ -1,10 +1,12 @@
 @import "../../definitions";
 
 .testimonial-with-link {
+  @include padding($site-spacing, "inline");
   background-color: $color-homepage-tinted-background;
 }
 
 .testimonial-with-link__quotation {
+  margin-inline: 0;
   color: $color-primary-dark--home-page;
   font-family: $font-secondary;
   font-size: #{get-rem-from-px(16)}rem;
